@@ -10,6 +10,7 @@ Version 0.4.3
   using South migrations and Django 1.6 or lower.
 * Make sure autocomplete="off" is only applied to the text input, not the hidden input (Issue #68, thanks @narrowfail)
 * Fixed some grammar in the documentation. (Thanks @rikrian)
+* Return an HTTP 410 GONE error code for expired captcha images, to avoid crawlers from trying to reindex them (PR #70, thanks @joshuajonah)
 
 Version 0.4.2
 -------------
